monticore-generator/src/test/resources/cocos/invalid/A4047/A4047a.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4047;

grammar A4047a {

  interface A = c:C;
  
  B implements A = c:D;
  
  C;
  
  D;
}
